# mandelbrot

./: .gitignore  pyproject.toml
mandelbrot/scripts/: julia.py  mandelbrot.py
notebooks/: visualising_mandelbrot.ipynb
